ResourceRequestCFNet.cpp won't compile after r144216 <http://webkit.org/b/111034>

Reviewed by Alexey Proskuryakov.

* WebCore.exp.in: Move Mac-only symbol into !PLATFORM(IOS)
section.  Update iOS-only symbol to add argument.
* platform/network/cf/ResourceRequest.h: Remove unused method
declaration.
* platform/network/cf/ResourceRequestCFNet.cpp:
(WebCore::ResourceRequest::doUpdatePlatformHTTPBody): Fix typos.
Add static_cast<CFStringRef>().
(WebCore::ResourceRequest::doUpdateResourceHTTPBody): Fix another
typo.


Canonical link: https://commits.webkit.org/129364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144278 268f45cc-cd09-0410-ab3c-d52691b4dbfc